chore(html nad package.json): add html some stuff and solv the problem of large chunkcs for build

--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "cp public/_redirects dist/",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test:adapter": "node --experimental-modules src/middleware/testAdapter.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
