--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,33 @@
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "18.18.0"
   NPM_FLAGS = "--legacy-peer-deps"
 
-# Redirect all routes to index.html for SPA routing
+# Handle Next.js SSR and API routes
+[[redirects]]
+  from = "/_next/static/*"
+  to = "/_next/static/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/_next/data/*"
+  to = "/_next/data/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/nextjs-api/:splat"
+  status = 200
+
+# For client-side routing - fallback for non-API/static routes
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/nextjs"
   status = 200
+  force = false
 
 # Set proper cache headers
 [[headers]]
@@ -21,8 +38,13 @@
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = "frame-ancestors 'none'"
 
-# Set specific headers for assets
+# Cache Next.js static assets
 [[headers]]
-  for = "/assets/*"
+  for = "/_next/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/static/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable" 
