fix: update netlify toml file for image redirects

--- a/netlify.toml
+++ b/netlify.toml
@@ -47,4 +47,11 @@
 [[headers]]
   for = "/static/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable" 
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[redirects]]
+from = '/_next/image/*'
+query = { q = ':quality', url = ':url', w = ':width' }
+to = '/.netlify/images?url=:url&w=:width&q=:quality'
+status = 200
+force = true 
